--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Hello World by Gowtham. Swamy Iyyapan</h1>
+    <h1>Hello World by Gowtham. Swamy Iyyapan Thanks</h1>
 </body>
 
 </html>
